fixed spacing issues on the navbar

--- a/rails-app/app/assets/stylesheets/layout/_nav.scss
+++ b/rails-app/app/assets/stylesheets/layout/_nav.scss
@@ -14,12 +14,12 @@ nav {
 		letter-spacing: 0.03em;
 		color: $primary-color;
 
-		@include span-columns (4);
+		@include span-columns (3);
 
 		@include media($mediumish) {
 			@include span-columns (3);
 			@include shift(.5);
-			width: 110px;
+			width: 70px;
 			font-size: 1em;
 		}	
 
@@ -48,7 +48,6 @@ nav {
 		text-decoration: none;
 	}
 
-
 	.profile-pic {
 		background-color: $accent-color;
 		border-radius: 100%;
@@ -56,7 +55,6 @@ nav {
 		width: 1.7em;
 		height: 1.7em;
 	}
-
 
 	.nav-logo {
 		@extend %teacher-logo;
@@ -66,6 +64,10 @@ nav {
 		margin: 0;
 		line-height: 0;
 		float: left;
-		margin-right: 3em;
+		margin-right: 1.5em;
+
+		@include media ($mediumish) {
+			margin-right: 2em;
+		}
 	}
 }
